Source/WebCore: Quadratic and bezier curves with coincident endpoints rendered incorrectly https://bugs.webkit.org/show_bug.cgi?id=105650

Patch by Youenn Fablet <youennf@gmail.com> on 2013-01-31
Reviewed by Kenneth Russell.

Tests: fast/canvas/canvas-bezier-same-endpoint.html
       fast/canvas/canvas-quadratic-same-endpoint.html

* html/canvas/CanvasPathMethods.cpp:
(WebCore::CanvasPathMethods::quadraticCurveTo):
(WebCore::CanvasPathMethods::bezierCurveTo):

LayoutTests: Quadratic and bezier curves with coincident endpoints rendered incorrectly
https://bugs.webkit.org/show_bug.cgi?id=105650
Modified TestExpectations for Mac, efl and Qt platforms as quadratic curves
may not be rendered correctly
(see https://bugs.webkit.org/show_bug.cgi?id=107118)

Patch by Youenn Fablet <youennf@gmail.com> on 2013-01-31
Reviewed by Kenneth Russell.

* fast/canvas/canvas-bezier-same-endpoint-expected.txt: Added.
* fast/canvas/canvas-bezier-same-endpoint.html: Added.
* fast/canvas/canvas-quadratic-same-endpoint-expected.txt: Added.
* fast/canvas/canvas-quadratic-same-endpoint.html: Added.
* platform/efl/TestExpectations: Skipped quad test
* platform/mac/TestExpectations: Skipped quad test
* platform/qt/TestExpectations: Skipped quad test

Canonical link: https://commits.webkit.org/126767@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141500 268f45cc-cd09-0410-ab3c-d52691b4dbfc